coerencia entre restantes classes tendo em conta metodos de gestao de payload implementados